--- a/notebooks/Fig-1.ipynb
+++ b/notebooks/Fig-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
     "\n",
     "sea_lmr = {}\n",
     "for exp_tag in LMR_namelist:\n",
-    "    with open(f'../data/lmr_recons/nhmt_LMRt_{exp_tag}_ann.pkl', 'rb') as f:\n",
+    "    with open(f'../data/lmr_recons/nhmt_LMRt_{exp_tag}.pkl', 'rb') as f:\n",
     "        nhmt, to = pickle.load(f)\n",
     "    \n",
     "    sea_lmr[exp_tag] = LMRt.utils.sea(nhmt, events_eVolv2k, preyr=5, postyr=10, verbose=False)"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
