--- a/notebooks/Fig-4.ipynb
+++ b/notebooks/Fig-4.ipynb
@@ -97,6 +97,8 @@
     }
    ],
    "source": [
+    "# plot Fig. 4\n",
+    "\n",
     "sns.set(style='ticks', font_scale=2)\n",
     "fig = plt.figure(figsize=[18, 8])\n",
     "gs = gridspec.GridSpec(1, 2)                                                                                                                                                       \n",
